Tree works and observable

--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,28 @@
 <html>
     <head>
         <title>Mobx inversify example</title>
+        <style>
+            .table {
+                width: 900px;
+            }
+
+            .row {
+                display: flex;
+            }
+
+            .childs {
+                margin-left: 20px;
+            }
+
+            .desc {
+                max-width: 100px;
+                min-width: 100px;
+            }
+
+            .title {
+                flex: 1 1 auto;
+            }
+        </style>
     </head>
     <body>
         <div id="app">Loading</div>
