--- a/src/index.html
+++ b/src/index.html
@@ -2,13 +2,45 @@
 <html>
     <head>
         <title>Mobx inversify example</title>
+        <link href="https://fonts.googleapis.com/css?family=Raleway:100,400,600" rel="stylesheet"> 
         <style>
+            .app-root {
+                width: 900px;
+                margin: auto;
+                font-family: 'Raleway', sans-serif;
+            }
             .table {
                 width: 900px;
+                border: 1px solid #eee;
+                box-shadow: 0 0 16px 0 #e6e6e6;
             }
 
             .row {
                 display: flex;
+                border-bottom: 1px solid #eee;
+                padding: 3px 5px;
+                cursor: pointer;
+                font-size: 14px;
+            }
+            .row:hover {
+                background: #eee;
+            }
+
+            .row .label {
+                border: none;
+                background: none;
+                color: #0095db;
+                cursor: pointer;
+                border-bottom: 1px dashed #0095db;
+                margin-left: 10px;
+                padding: 0;
+                display: none;
+                margin-bottom: -1px;
+                font-size: 12px;
+            }
+
+            .row:hover .label {
+                display: inline-block;
             }
 
             .childs {
@@ -23,6 +55,26 @@
             .title {
                 flex: 1 1 auto;
             }
+
+            .header {
+                font-weight: 400;
+                color: #666;
+            }
+
+            .header h1 span {
+                font-weight: 100;
+            }
+
+            .header h2 {
+                font-size: 14px;
+                font-weight: 400;
+            }
+
+            .header h2 b {
+                font-weight: 600;
+            }
+
+
         </style>
     </head>
     <body>
