--- a/src/index.html
+++ b/src/index.html
@@ -74,6 +74,11 @@
                 font-weight: 600;
             }
 
+            .loading {
+                margin: 10px;
+                color: #666;
+                font-weight: 100;
+            }
 
         </style>
     </head>
