--- a/src/index.html
+++ b/src/index.html
@@ -80,6 +80,26 @@
                 font-weight: 100;
             }
 
+
+            .filter {
+                margin-top: 30px;
+                margin-bottom: 15px;
+            }
+
+            .filter span {
+                font-size: 12px;
+                color: #999;
+                margin-right: 10px;
+            }
+
+            .filter input {
+                border: none;
+                border-bottom: 1px solid #ccc;
+            }
+
+            .filter input:focus {
+                border-bottom: 1px solid #0095db;
+            }
         </style>
     </head>
     <body>
