--- a/src/index.html
+++ b/src/index.html
@@ -4,15 +4,26 @@
         <title>Mobx inversify example</title>
         <link href="https://fonts.googleapis.com/css?family=Raleway:100,400,600" rel="stylesheet"> 
         <style>
+            body {
+                margin: 0;
+                padding: 0;
+            }
             .app-root {
-                width: 900px;
-                margin: auto;
+                position: absolute;
+                width: 100%;
+                top: 0;
+                left: 0;
                 font-family: 'Raleway', sans-serif;
+                bottom: 0;
             }
             .table {
-                width: 900px;
+                width: 100%;
                 border: 1px solid #eee;
                 box-shadow: 0 0 16px 0 #e6e6e6;
+                overflow: scroll;
+                height: 100%;
+                overflow-x: hidden;
+                margin-bottom: 10px;
             }
 
             .row {
@@ -59,6 +70,11 @@
             .header {
                 font-weight: 400;
                 color: #666;
+                height: 80px
+            }
+
+            .header h1 {
+                margin-top: 0;
             }
 
             .header h1 span {
@@ -68,6 +84,7 @@
             .header h2 {
                 font-size: 14px;
                 font-weight: 400;
+                margin: 0;
             }
 
             .header h2 b {
@@ -84,6 +101,7 @@
             .filter {
                 margin-top: 30px;
                 margin-bottom: 15px;
+                flex: 1 1 auto;
             }
 
             .filter span {
@@ -99,6 +117,39 @@
 
             .filter input:focus {
                 border-bottom: 1px solid #0095db;
+            }
+
+            .page {
+                width: 100%;
+                height: 100%;
+            }
+
+            .page .workspace {
+                display: flex;
+                width: 100%;
+                position: absolute;
+                top: 80px;
+                bottom: 0;
+            }
+
+            .panel {
+                flex: 1 1 auto;
+                margin: 0 10px;
+                height: 100%;
+                display: flex;
+                flex-direction: column;
+            }
+
+            .table-head {
+                display: flex;
+            }
+
+            .table-title {
+                min-width: 150px;
+                max-width: 150px;
+                font-weight: 100;
+                font-size: 24px;
+                color: #999;
             }
         </style>
     </head>
