Fix headers styles

--- a/src/index.html
+++ b/src/index.html
@@ -70,7 +70,8 @@
             .header {
                 font-weight: 400;
                 color: #666;
-                height: 80px
+                height: 80px;
+                margin-left: 10px;
             }
 
             .header h1 {
