--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
                 box-shadow: 0 0 16px 0 #e6e6e6;
                 overflow: scroll;
                 height: 100%;
-                overflow-x: hidden;
+                overflow-x: scroll;
                 margin-bottom: 10px;
             }
 
@@ -65,6 +65,10 @@
 
             .title {
                 flex: 1 1 auto;
+                text-overflow: ellipsis;
+                white-space: nowrap;
+                overflow: hidden;
+                margin-right: 10px;
             }
 
             .header {
@@ -139,6 +143,12 @@
                 height: 100%;
                 display: flex;
                 flex-direction: column;
+                overflow: hidden;
+            }
+
+            .panel:first-child {
+                min-width: 700px;
+                max-width: 700px;
             }
 
             .table-head {
