--- a/src/index.html
+++ b/src/index.html
@@ -37,6 +37,10 @@
                 background: #eee;
             }
 
+            .row[data-highlight="true"] {
+                background: #ffff99;
+            }
+
             .row .label {
                 border: none;
                 background: none;
