--- a/src/index.html
+++ b/src/index.html
@@ -166,6 +166,11 @@
                 font-size: 24px;
                 color: #999;
             }
+
+            .limitation {
+                padding: 10px;
+                color: #999;
+            }
         </style>
     </head>
     <body>
