Support full list
Now we can show all list without limitations

--- a/src/index.html
+++ b/src/index.html
@@ -20,9 +20,7 @@
                 width: 100%;
                 border: 1px solid #eee;
                 box-shadow: 0 0 16px 0 #e6e6e6;
-                overflow: scroll;
                 height: 100%;
-                overflow-x: scroll;
                 margin-bottom: 10px;
             }
 
@@ -32,6 +30,8 @@
                 padding: 3px 5px;
                 cursor: pointer;
                 font-size: 14px;
+                box-sizing: border-box;
+                height: 25px;
             }
             .row:hover {
                 background: #eee;
