--- a/src/index.html
+++ b/src/index.html
@@ -49,13 +49,9 @@
                 border-bottom: 1px dashed #0095db;
                 margin-left: 10px;
                 padding: 0;
-                display: none;
+                display: inline-block;
                 margin-bottom: -1px;
                 font-size: 12px;
-            }
-
-            .row:hover .label {
-                display: inline-block;
             }
 
             .childs {
@@ -63,8 +59,33 @@
             }
 
             .desc {
-                max-width: 80px;
-                min-width: 80px;
+                max-width: 100px;
+                min-width: 100px;
+                font-family: monospace;
+                text-align: right;
+            }
+
+            .mem-label {
+                min-width: 25px;
+                max-width: 25px;
+                border-radius: 3px;
+                visibility: hidden;
+                color: #fff;
+                text-align: center;
+                font-size: 10px;
+                height: 15px;
+                margin-top: 2px;
+                margin-left: 10px;
+            }
+
+            .mem-label[data-type="ram"] {
+                background: #cc8800;
+                visibility: visible;
+            }
+
+            .mem-label[data-type="rom"] {
+                background: #88cc00;
+                visibility: visible;
             }
 
             .title {
